@@ -11,6 +11,7 @@ Fixed bug 2835074 - False -: DoubleCheckedLocking with reversed null check
 Fixed bug 2826119 - False +: DoubleCheckedLocking warning with volatile field
 Fixed bug 2904832 - Type resolution not working for ASTType when using an inner class
 
+Modify (and hopefully fixed) CPD algorithm thanks to a patch from Juan JesÃºs GarcÃ­a de Soria.
 Correct -benchmark reporting of Rule visits via the RuleChain
 Fix issue with Type Resolution incorrectly handling of Classes with same name as a java.lang Class.
 The JSP/JSF parser can now parse Unicode input.
